--- a/style.css
+++ b/style.css
@@ -1,31 +1,38 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: lightgray;
-	padding: 0 0 10px 0;
 	display: grid;
 	grid-template-columns: auto 1fr;
 	grid-template-rows: auto;
 	grid-template-areas:
-		'header header'
 		'nav intro'
 		'nav portfolio'
 		'nav skills'
-		'nav contact'
-		'nav footer';
+		'nav contact';
 	gap: 12px;
+	margin: 92px 0 72px 0;
 }
 header {
-	grid-area: header;
+	/* grid-area: header; */
+	height: 80px;
+
+	top: 0;
+}
+header,
+footer {
+	position: fixed;
 	display: flex;
 	align-items: center;
-	height: 80px;
-	background: rgba(253, 249, 249, 0.37);
+	width: 100%;
+	background: rgb(194, 189, 189);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .slide {
 	background: rgba(253, 249, 249, 0.37);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 20px;
+	margin-right: 12px;
+	padding: 20px;
 }
 h1 {
 	display: flex;
@@ -60,9 +67,16 @@ h2 {
 #portfolio {
 	grid-area: portfolio;
 	background: rgba(253, 249, 249, 0.13);
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 10px;
 }
-article {
-	padding: 2px;
+#portfolio article {
+	margin-right: 0;
+}
+article img {
+	width: 80%;
+	height: auto;
 }
 #skills {
 	grid-area: skills;
@@ -71,14 +85,19 @@ article {
 	grid-area: contact;
 }
 footer {
-	grid-area: footer;
-	display: flex;
-	align-items: center;
+	/* grid-area: footer; */
 	justify-content: space-between;
+	height: 60px;
+	bottom: 0;
+}
+footer p {
+	margin-left: 24px;
+	font-size: 12px;
 }
 footer ul {
 	display: flex;
 	align-items: center;
+	margin-right: 12px;
 }
 #menuIcon,
 #menuX {
@@ -93,4 +112,5 @@ footer ul {
 	width: 40px;
 	height: 40px;
 	opacity: 50%;
+	margin: 6px;
 }
