--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ body {
 		'nav contact';
 	gap: 12px;
 	margin: 92px 0 72px 0;
+	line-height: 150%;
 }
 header {
-	/* grid-area: header; */
 	height: 80px;
-
 	top: 0;
 }
 header,
@@ -27,24 +26,28 @@ footer {
 	background: rgb(194, 189, 189);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.slide {
-	background: rgba(253, 249, 249, 0.37);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	border-radius: 20px;
-	margin-right: 12px;
-	padding: 20px;
+header img {
+	margin: 12px;
 }
 h1 {
 	display: flex;
 	margin-left: 50px;
 	font-size: 30px;
 }
+.slide {
+	background: rgba(253, 249, 249, 0.37);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 12px;
+	margin-right: 12px;
+	padding: 40px;
+}
+
 #nav {
 	display: none;
 	grid-area: nav;
 	width: 150px;
 	padding-top: 30px;
-	border-radius: 0 25px 25px 0;
+	border-radius: 0 12px 12px 0;
 }
 nav li {
 	margin: 25px 0 25px 20px;
@@ -54,29 +57,40 @@ nav li a {
 	color: black;
 	font-size: 18px;
 }
-div {
-	padding: 20px;
-}
 #intro {
 	grid-area: intro;
 }
+#intro h2 {
+	font-size: 40px;
+}
 h2 {
-	font-size: 20px;
+	font-size: 30px;
 	margin: 10px 0 25px 0;
 }
 #portfolio {
 	grid-area: portfolio;
 	background: rgba(253, 249, 249, 0.13);
-	display: grid;
+	/* display: grid;
 	grid-template-columns: 1fr;
-	gap: 10px;
+	gap: 12px; */
+	display: flex;
+	flex-direction: column;
 }
 #portfolio article {
 	margin-right: 0;
 }
 article img {
-	width: 80%;
+	display: block;
+
+	max-width: 100%;
 	height: auto;
+}
+h3 {
+	font-size: 20px;
+}
+h3,
+article p {
+	margin: 30px 0;
 }
 #skills {
 	grid-area: skills;
@@ -85,7 +99,6 @@ article img {
 	grid-area: contact;
 }
 footer {
-	/* grid-area: footer; */
 	justify-content: space-between;
 	height: 60px;
 	bottom: 0;
