--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
 		'nav skills'
 		'nav contact';
 	gap: 12px;
-	margin: 92px 0 72px 0;
+	padding: 92px 12px 72px 0;
 	line-height: 150%;
+	min-width: 330px;
 }
 header {
 	height: 80px;
@@ -38,14 +39,12 @@ h1 {
 	background: rgba(253, 249, 249, 0.37);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 12px;
-	margin-right: 12px;
-	padding: 40px;
+	padding: 12px;
 }
-
 #nav {
 	display: none;
 	grid-area: nav;
-	width: 150px;
+	width: 120px;
 	padding-top: 30px;
 	border-radius: 0 12px 12px 0;
 }
@@ -59,41 +58,41 @@ nav li a {
 }
 #intro {
 	grid-area: intro;
+	min-width: 327px;
 }
 #intro h2 {
 	font-size: 40px;
+	line-height: 110%;
 }
 h2 {
-	font-size: 30px;
-	margin: 10px 0 25px 0;
+	font-size: 20px;
+	padding-bottom: 12px;
 }
 #portfolio {
 	grid-area: portfolio;
 	background: rgba(253, 249, 249, 0.13);
-	/* display: grid;
+	display: grid;
 	grid-template-columns: 1fr;
-	gap: 12px; */
-	display: flex;
-	flex-direction: column;
-}
-#portfolio article {
-	margin-right: 0;
+	gap: 12px;
 }
 article img {
-	display: block;
-
 	max-width: 100%;
 	height: auto;
+	border-radius: 12px;
 }
 h3 {
 	font-size: 20px;
 }
 h3,
 article p {
-	margin: 30px 0;
+	margin: 12px 0;
 }
 #skills {
 	grid-area: skills;
+}
+#skills img {
+	width: 30px;
+	height: auto;
 }
 #contact {
 	grid-area: contact;
