--- a/css-media-query.css
+++ b/css-media-query.css
@@ -1,5 +1,34 @@
 @media screen and (min-width: 992px) {
-	#portfolio {
+	body {
+		grid-template-columns: auto 2fr 1fr;
+		grid-template-rows: auto;
+		grid-template-areas:
+			'nav intro skills'
+			'nav  portfolio portfolio'
+			'nav contact contact';
+	}
+	h1 {
+		margin: 0 auto;
+	}
+	nav li a {
+		font-size: 3vmin;
+		font-weight: lighter;
+	}
+	.portfolioContent {
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 150px repeat(5 1fr);
-		}
+		grid-template-rows: auto repeat(3 1fr);
+		gap: 3vw;
+	}
+	#project2 {
+		position: relative;
+		bottom: 25%;
+	}
+	#project4 {
+		position: relative;
+		bottom: 25%;
+	}
+	#skills {
+		min-width: 100%;
+		min-height: 20%;
+	}
+}
