--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 	min-width: 320px;
 	overflow-x: hidden;
 	font-size: 3vmin;
-	background-image: url('assets/nils-rasmusson-jVpIG7a-6JU-unsplash.jpg');
+	background-image: url('assets/pictures/nils-rasmusson-jVpIG7a-6JU-unsplash.jpg');
+	background-color: rgb(16, 189, 219);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -46,6 +47,7 @@ footer {
 	width: 100%;
 	background: rgb(194, 189, 189);
 	z-index: 1;
+	background-color: rgb(16, 162, 219);
 }
 header img {
 	margin: 12px;
@@ -151,12 +153,12 @@ p {
 }
 h4 {
 	font-size: max(min(4vmin, 60px), 20px);
-	margin: 5% 0;
+	margin: 3vmin 0;
 	font-weight: bold;
 }
 
 article p {
-	padding: 5vmin 0;
+	padding-bottom: 5vmin;
 	border-bottom: solid;
 	border-width: 0.25vmin;
 }
@@ -189,6 +191,7 @@ article p {
 	height: auto;
 	max-width: 100px;
 	min-width: 50px;
+	opacity: 80%;
 }
 #contact {
 	grid-area: contact;
@@ -219,6 +222,9 @@ footer a {
 	font-size: 12px;
 	color: black;
 	line-height: 150%;
+}
+.weather {
+	display: none;
 }
 footer ul {
 	display: flex;
