Weather API finalized and styled

--- a/style.css
+++ b/style.css
@@ -226,6 +226,9 @@ footer a {
 .weather {
 	display: none;
 }
+.weather p {
+	margin: 0 auto;
+}
 footer ul {
 	display: flex;
 	justify-content: space-around;
