Sheets API Call working
I had some issues with massaging strings into no-spaces and all-caps for IDs, but everything seems to be working now. I'm really happy with how the layout is working. Right now, when the data is fetched and creates HTML, the website scrolls down, which I would like it not to. Not sure where to start with this issue.

--- a/css-media-query.css
+++ b/css-media-query.css
@@ -8,13 +8,10 @@
 		grid-template-rows: auto repeat(3 1fr);
 		gap: 3vw;
 	}
-	#project2 {
-		position: relative;
-		bottom: 25%;
-	}
+	#project2,
 	#project4 {
 		position: relative;
-		bottom: 25%;
+		bottom: 10vmin;
 	}
 	.slide + #skills {
 		min-width: 100px;
